[project]
name = "finsight"
version = "0.1.0"
description = "Multi-tenant financial document intelligence platform"
authors = [
    {name = "Gilbert Cheruiyot",email = "gilbertofke@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pymupdf (>=1.27.2.3,<2.0.0.0)",
    "openai (>=2.43.0,<3.0.0)",
    "numpy (>=2.4.6,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.18,<0.16.0)",
    "pre-commit (>=4.6.0,<5.0.0)"
]
